//package wanyou.game.protocol;
//请求开始 准备好了 取消准备
message BceReadyStart{
    required bool isReady = 1;      //是否准备 0 false 1 true
}

